// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should accept emoji 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      className=""
      pointerEvents="auto"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 48,
            "width": "100%",
          },
          null,
          Object {},
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="words"
        autoCorrect={false}
        autoFocus={false}
        beginningTag=""
        className=""
        containerStyle={Object {}}
        disabled={false}
        editable={true}
        keyboardType="default"
        maxLength={null}
        multiline={false}
        needBorderBottom={false}
        onPress={null}
        placeholder=""
        placeholderTextColor="#96A1A7"
        rejectResponderTermination={true}
        returnKeyType={null}
        secureTextEntry={false}
        selectionColor="#0088CC"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#000000",
              "fontFamily": "SFProText-Regular",
              "fontSize": 18,
              "fontWeight": "400",
              "letterSpacing": 0.5,
              "lineHeight": 24,
              "textAlign": "left",
            },
            Object {
              "flex": 1,
              "lineHeight": null,
              "margin": 0,
              "padding": 0,
            },
            Object {},
          ]
        }
        testID="uiTextInput"
        textStyle={Object {}}
        underlineColorAndroid="transparent"
        value="👍👌✨"
      />
    </View>
  </View>
</View>
`;

exports[`Should accept letters and numbers 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      className=""
      pointerEvents="auto"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 48,
            "width": "100%",
          },
          null,
          Object {},
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="words"
        autoCorrect={false}
        autoFocus={false}
        beginningTag=""
        className=""
        containerStyle={Object {}}
        disabled={false}
        editable={true}
        keyboardType="default"
        maxLength={null}
        multiline={false}
        needBorderBottom={false}
        onPress={null}
        placeholder=""
        placeholderTextColor="#96A1A7"
        rejectResponderTermination={true}
        returnKeyType={null}
        secureTextEntry={false}
        selectionColor="#0088CC"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#000000",
              "fontFamily": "SFProText-Regular",
              "fontSize": 18,
              "fontWeight": "400",
              "letterSpacing": 0.5,
              "lineHeight": 24,
              "textAlign": "left",
            },
            Object {
              "flex": 1,
              "lineHeight": null,
              "margin": 0,
              "padding": 0,
            },
            Object {},
          ]
        }
        testID="uiTextInput"
        textStyle={Object {}}
        underlineColorAndroid="transparent"
        value="test 123"
      />
    </View>
  </View>
</View>
`;

exports[`Should accept unicode symbols 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      className=""
      pointerEvents="auto"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 48,
            "width": "100%",
          },
          null,
          Object {},
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="words"
        autoCorrect={false}
        autoFocus={false}
        beginningTag=""
        className=""
        containerStyle={Object {}}
        disabled={false}
        editable={true}
        keyboardType="default"
        maxLength={null}
        multiline={false}
        needBorderBottom={false}
        onPress={null}
        placeholder=""
        placeholderTextColor="#96A1A7"
        rejectResponderTermination={true}
        returnKeyType={null}
        secureTextEntry={false}
        selectionColor="#0088CC"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#000000",
              "fontFamily": "SFProText-Regular",
              "fontSize": 18,
              "fontWeight": "400",
              "letterSpacing": 0.5,
              "lineHeight": 24,
              "textAlign": "left",
            },
            Object {
              "flex": 1,
              "lineHeight": null,
              "margin": 0,
              "padding": 0,
            },
            Object {},
          ]
        }
        testID="uiTextInput"
        textStyle={Object {}}
        underlineColorAndroid="transparent"
        value="® ✉ § © ☯ ? $ £"
      />
    </View>
  </View>
</View>
`;
